<resources>
    <string name="app_name">Stores MVVM Coroutines</string>

    <string name="arg_id" translatable="false">key_id</string>

    <string name="dialog_delete_title">¿Delete store?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialog_options_title">¿What would you like to do?</string>

    <string name="description_img_photo">Imagen de la tienda</string>
    <string name="description_store_add">Crear tienda</string>

    <string name="edit_store_title_edit">Editar tienda</string>
    <string name="edit_store_message_update_success">Tienda actualizada</string>
    <string name="edit_store_message_valid">Revise los campos requeridos.</string>
    <string name="edit_store_message_save_success">Tienda agregada correctamente.</string>
    <string name="edit_store_title_add">Crear tienda</string>

    <string name="hint_name">nombre de la tienda</string>
    <string name="hint_phone">teléfono</string>
    <string name="hint_website">url del sitio web</string>
    <string name="hint_photo_url">url de la imagen</string>

    <string name="helper_required">Requerido</string>

    <string name="menu_save">Save</string>

    <string name="main_error_no_website">Esta tienda no cuenta con un sitio web.</string>
    <string name="main_error_no_resolve">No se encontró ninguna app compatible</string>
    <string name="main_error_get">Error al consultar datos.</string>
    <string name="main_error_insert">Error al insertar.</string>
    <string name="main_error_update">Error al actualizar.</string>
    <string name="main_error_delete">Error al eliminar.</string>
    <string name="main_error_unknown">Erorr desconocido.</string>

    <string name="options_item_call">To call</string>
    <string name="options_item_website">Go to website</string>
<<<<<<< HEAD
=======
    <string name="options_item_call">Call</string>

    <string name="store_image_description">Store image</string>
    <string name="main_error_get">Error al consultar datos</string>
    <string name="main_error_insert">Error al insertar</string>
    <string name="main_error_update">Error al actualizar</string>
    <string name="main_error_delete">Error al eliminar</string>
    <string name="main_error_unkwnown">Error desconocido</string>
    <string name="main_error_unknown">Error desconocido</string>
>>>>>>> 4928e1c6a1e69c228df54dff3ef6de12ca4bcb8e
</resources>