<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".editModule.EditStoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:startIconDrawable="@drawable/ic_store"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterMaxLength="@integer/max_name_length"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_name_length"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_phone"
            app:startIconDrawable="@drawable/ic_phone"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_phone_length"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_website"
            app:startIconDrawable="@drawable/ic_insert_link"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebsiteUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/color_link"
                android:maxLines="@integer/url_website_lines"
                android:minLines="@integer/url_website_lines"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/common_padding_default">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhotoUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_photo_url"
                app:helperText="@string/helper_required"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_insert_link"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhotoUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:maxLines="@integer/photo_url_lines"
                    android:minLines="@integer/photo_url_lines"
                    android:textColor="@color/color_link"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="@dimen/thumb_photo_size"
                android:layout_height="@dimen/thumb_photo_size"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/description_img_photo"
                android:layout_marginStart="@dimen/common_padding_default"/>

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>